Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-26279

couchstore: memory leak in map/reduce tests

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.5.0
    • 5.5.0
    • view-engine
    • None
    • Untriaged
    • Unknown

    Description

      Some recent changes to the map/reduce code in couchstore appear to be causing a memory leak - see this noop patch off current master which demonstrates the issue: http://review.couchbase.org/#/c/84057/

      The following tests FAILED:
      	  6 - couchstore-mapreduce-builtin-test (Failed)
      	  7 - couchstore-mapreduce-map-test (Failed)
      	  8 - couchstore-mapreduce-reduce-test (Failed)
      	  9 - couchstore-testapp (Failed)
      

      Example failure (they appear similar):

       3/10 Test  #6: couchstore-mapreduce-builtin-test ...***Failed    0.81 sec
      Running mapreduce builtin tests
       
      =================================================================
      ==20082==ERROR: LeakSanitizer: detected memory leaks
       
      Direct leak of 8 byte(s) in 1 object(s) allocated from:
          #0 0x507ef0 in operator new(unsigned long) (/home/couchbase/jenkins/workspace/couchstore-addresssanitizer-master/build/couchstore/couchstore_mapreduce-builtin-test+0x507ef0)
          #1 0x7f3b39b3e90a in v8::ArrayBuffer::Allocator::NewDefaultAllocator() (/home/couchbase/jenkins/workspace/couchstore-addresssanitizer-master/install/lib/libv8.so+0x3df90a)
          #2 0x5148e9 in start_context(char const**, int, void**, char**) /home/couchbase/jenkins/workspace/couchstore-addresssanitizer-master/couchstore/src/views/mapreduce/mapreduce_c.cc:354:9
          #3 0x519ba6 in test_b64decode_function /home/couchbase/jenkins/workspace/couchstore-addresssanitizer-master/couchstore/tests/mapreduce/builtin.c:94:11
          #4 0x519ba6 in main /home/couchbase/jenkins/workspace/couchstore-addresssanitizer-master/couchstore/tests/mapreduce/builtin.c:162
          #5 0x7f3b35b2d82f in __libc_start_main /build/glibc-9tT8Do/glibc-2.23/csu/../csu/libc-start.c:291
      

      Full log: http://cv.jenkins.couchbase.com/job/couchstore-addresssanitizer-master/385/console

      Note this also causes the overall couchstore commit validation (affecting KV-Engine as well as View Engine) to fail.

      Attachments

        For Gerrit Dashboard: MB-26279
        # Subject Branch Project Status CR V

        Activity

          People

            jeelan.poola Jeelan Poola
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty