MB-26279: Do not leak ArrayBuffer allocator

And retrigger buildbot...

Change-Id: I0bf921263475fe7413f2f04cdeca8a918473687b
Reviewed-on: http://review.couchbase.org/84061
Reviewed-by: Sriram Melkote <siri@couchbase.com>
Tested-by: Sriram Melkote <siri@couchbase.com>